--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,33 @@
-obj
-Temp
-*.tmproj
-*.csproj
-*.unityproj
-*.sln
-*.suo
-*.user
-*.pidb
-*.userprefs
-
-Library/*
-
-Assets/Models/
-Assets/Textures/
-Assets/Animations/
-
-ProjectSettings/EditorSettings.asset
-
-AnnotationManager
-assetDatabase3
-AssetImportState
-assetservercachev3
-AssetServerCacheV3
-AssetVersioning.db
-AudioManager.asset
-BuildPlayer.prefs
-BuildSettings.asset
-DynamicsManager.asset
-EditorSettings.asset
-EditorUserBuildSettings.asset
-expandedItems
-FailedAssetImports.txt
-guidmapper
-InspectorExpandedItems.asset
-MonoManager.asset
-NetworkManager.asset
-ScriptMapper
+# =============== #
+# Unity generated #
+# =============== #
+Temp/
+Obj/
+UnityGenerated/
+Library/
+ 
+# ===================================== #
+# Visual Studio / MonoDevelop generated #
+# ===================================== #
+ ExportedObj/
+ *.svd
+ *.userprefs
+ *.csproj
+ *.pidb
+ *.suo
+ *.sln
+ *.user
+ *.unityproj
+ *.booproj
+  
+# ============ #
+# OS generated #
+# ============ #
+  .DS_Store
+  .DS_Store?
+  ._*
+  .Spotlight-V100
+  .Trashes
+  Icon?
+  ehthumbs.db
+  Thumbs.db
