--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,9 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\LevelDynamics\CameraMovement.cs" />
-     <Compile Include="Assets\Scripts\LevelDynamics\CameraTracking.cs" />
-     <Compile Include="Assets\Scripts\Unapplied\Tags.cs" />
+     <Compile Include="Assets\7. Scripts\Dynamics\CameraMovement.cs" />
+     <Compile Include="Assets\7. Scripts\Dynamics\CameraTracking.cs" />
+     <Compile Include="Assets\7. Scripts\Misc\Tags.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
