--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,16 +53,15 @@
      <Compile Include="Assets\7. Scripts\Misc\Decoratable.cs" />
      <Compile Include="Assets\7. Scripts\Misc\InputWrapper.cs" />
      <Compile Include="Assets\7. Scripts\Misc\Tags.cs" />
-     <Compile Include="Assets\7. Scripts\TestStartGame.cs" />
+     <Compile Include="Assets\7. Scripts\Misc\TeamColor.cs" />
+     <Compile Include="Assets\7. Scripts\Misc\TestStartGame.cs" />
+     <Compile Include="Assets\7. Scripts\Player\Player.cs" />
+     <Compile Include="Assets\7. Scripts\Weapons\Weapon.cs" />
      <Compile Include="Assets\Scripts\Menu\ArmoryState.cs" />
      <Compile Include="Assets\Scripts\Menu\IState.cs" />
      <Compile Include="Assets\Scripts\Menu\MenuManager.cs" />
      <Compile Include="Assets\Scripts\Menu\MenuStates.cs" />
      <Compile Include="Assets\Scripts\Menu\SplashState.cs" />
-     <Compile Include="Assets\Scripts\Test\TestDecoratable.cs" />
-     <Compile Include="Assets\Scripts\Test\TestFilter1.cs" />
-     <Compile Include="Assets\Scripts\Test\TestFilter2.cs" />
-     <Compile Include="Assets\Scripts\Test\TestFilter3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
