Objective text GAIA

--- a/Assets/Resources/JSON/Settings/settings.json
+++ b/Assets/Resources/JSON/Settings/settings.json
@@ -1,7 +1,1 @@
-{
-	"minSoundDistance" : "200",
-	"maxSoundDistance" : "250",
-	"volume" : "1",
-	"volumemovement" : "0.4",
-	"volumemusic" : "0.3"
-}
+{"minSoundDistance":"200", "maxSoundDistance":"250", "volume":"0.5", "volumemovement":"0.4", "volumemusic":"0.3"}
